--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.6"
 typing-extensions = "^3.7.4"
+pytest-mock = "^3.3.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^4.6"
+pytest = "^5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
