--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ include = [
 python = "^3.6"
 typing-extensions = "^3.7.4"
 pytest-mock = "^3.3.1"
+black = "^20.8b1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
