--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,14 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.6"
 typing-extensions = "^3.7.4"
-pytest-mock = "^3.3.1"
-black = "^20.8b1"
-aiosqlite = "^0.15.0"
-pytest-asyncio = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
+pytest-mock = "^3.3.1"
+black = "^20.8b1"
+flake8 = "^3.8.4"
+aiosqlite = "^0.15.0"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
